pratice form captures function in javascript

--- a/practice.html
+++ b/practice.html
@@ -4,8 +4,17 @@
         <title>practice loop in JS</title>
     </head>
     <body>
-
+        <form name="infoCustomer" onsubmit="capture()">
+            <label>what is your name?
+                <input type="text" name="name">
+            </label>
+            <label> what is your phone number?
+                <input type="text" name="phone">
+            </label>
+            <input type="submit">
+        </form>
     <!-- <script src="loop.js"></script> -->
-    <script src="functions.js"></script>
+    <!-- <script src="functions.js"></script> -->
+    <script src="form-handler.js"></script>
     </body>    
 </html>
